Traffic-split/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-canary-svc
spec:
  selector:
    app: canary
  ports:
   - protocol: "TCP"
     port: 80
     targetPort: 80
  type: ClusterIP
