Traffic-split/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: my-canary-svc
spec:
  host: my-canary-svc
  subsets:
  - name: v1
    labels:
      version: v1 
  - name: v2
    labels:
      version: v2
  - name: v3
    labels:
      version: v3
