Traffic-split/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: test-virtual-service
spec:
  hosts:
    - "test.com"   
  gateways:
    - "canary"  
    - mesh
  http: 
  - route:
    - destination:
        host: my-canary-svc
        subset: v1
      weight: 10 
    - destination:
        host: my-canary-svc
        subset: v2
      weight: 10
    - destination:
        host: my-canary-svc
        subset: v3
      weight: 80
